bugfix: resolve modal now fits on mobile screens

--- a/app/src/PuzzlePage/Goals.scss
+++ b/app/src/PuzzlePage/Goals.scss
@@ -9,9 +9,9 @@
 .goal {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 0.5rem 1rem;
-  width: 10rem;
+  width: 6rem;
 }
 
 .goal-desc {
